# comp23hw

./: .gitignore  README.md  detect_latest_pr.ml  exam.md
CreeperML/: CreeperML.opam  README.md  build.sh  dune  dune-project  main.ml
CreeperML/lib/: anf.ml  anf.mli  asm.ml  asm.mli  bindings.c  closure.ml  closure.mli  codegen.ml  codegen.mli  compiler.ml  compiler.mli  dune  indexed_ast.ml  indexed_ast.mli  infer.ml  infer.mli  lexer.mll  monad.ml  monad.mli  parse_errors.messages  parser.mly  parser_ast.ml  parser_ast.mli  parser_interface.ml  parser_interface.mli  position.ml  position.mli  pp.ml  pp.mli  state.ml  state.mli  std.ml  std.mli  type_ast.ml  type_ast.mli
CreeperML/test/: dune  test_anf.ml  test_anf.t  test_asm.ml  test_asm.t  test_closures.ml  test_closures.t  test_db.ml  test_db.t  test_infer.ml  test_infer.t  test_llvm.ml  test_llvm.t  test_parser.ml  test_parser.t
JaML/: JaML.opam  dune  dune-project  jaml-inference.t  jaml.ml
JaML/lib/: LL_ast.mli  Pprintanf.ml  Pprintanf.mli  Pprinttopleveltree.ml  Pprinttopleveltree.mli  Pprintty.ml  Pprintty.mli  Pprinttypedtree.ml  Pprinttypedtree.mli  Pprinttypetree.ml  alpha.ml  alpha.mli  anf.ml  anf.mli  anfconv.ml  anfconv.mli  ast.ml  closure.ml  closure.mli  counter.ml  counter.mli  dune  inferencer.ml  inferencer.mli  lambdalift.ml  lambdalift.mli  monads.ml  monads.mli  parser.ml  parser.mli  toplevel.ml  toplevel.mli  ty.ml  ty.mli  typedtree.ml  typedtree.mli  typetree.ml  typetree.mli
JaML/lib/tests/: alpha_tests.ml  anf_tests.ml  closure_tests.ml  dune  infer_tests.ml  lambdalift_tests.ml  parser_test.ml  parser_test.mli
JaML/tests/: combinators.ja  occurs-check-disable.ja
KREML/: .gitignore  KREML.opam  Makefile  dune-project
KREML/demos/: demoAnf.ml  demoAnf.t  demoInfer.ml  demoInfer.t  demoLlvm.ml  demoLlvm.t  dune
KREML/lib/: anf.ml  anf.mli  anf_conv.ml  anf_conv.mli  anf_pretty_printer.ml  anf_pretty_printer.mli  ast.ml  ast.mli  cc_ast.ml  clos_conv.ml  clos_conv.mli  closure.ml  counter.ml  counter.mli  dune  gen_var.ml  generate_code.ml  inferencer.ml  inferencer.mli  lambda_lifting.ml  lambda_lifting.mli  ll_ast.ml  parser.ml  parser.mli  pretty_printer.ml  runtime.c  typing.ml  typing.mli
KREML/lib/frontend/: ast.ml  inferencer.ml  inferencer.mli  parser.mli  typing.ml  typing.mli
KREML/lib/llvm/: generate_code.ml  generate_code.mli  runtime.c
KREML/lib/middleend/: anf.ml  anf.mli  anf_conv.ml
MimiML/: .ocamlformat  MimiML.opam  dune  dune-project  repl.ml
MimiML/demos/: demoANF.ml  demoANF.t  demoTypeChecker.ml  demoTypeChecker.t  dune
MimiML/lib/: anf.ml  anf.mli  ast.ml  dune  inferencer.ml  parser.ml  pp.ml  pp.mli  typing.ml
MimiML/test/: dune
NeinML/: NeinML.opam  dune-project
NeinML/demos/: anfTests.t  closureTests.t  demoAnf.ml  demoClosure.ml  demoInfer.ml  demoLambda.ml  demoLlvm.ml  demoParse.ml  dune  inferingTests.t  lambdaLiftingTests.t  llvmTests.t  llvmTests2.t  parsingTests.t
NeinML/lib/: Pprintanf.ml  Pprintanf.mli  Pprintast.ml  Pprintast.mli  anf.ml  anf.mli  ast.ml  ast.mli  closure.ml  closure.mli  codegen.ml  codegen.mli  dune  inferencer.ml  inferencer.mli  lambda_lifting.ml  lambda_lifting.mli  monad.ml  monad.mli  parser.ml  parser.mli  typing.ml  typing.mli
NeinML/runtime/: dune  runtime.c
PeDuCoML/: .ocamlformat  Makefile  PeDuCoML.opam  PeDuCoML.opam.template  dune-project
PeDuCoML/lib/: Pprintast.ml  anf.ml  ast.ml  ast.mli  dune  inferencer.ml  llvm_comp.ml  parser.ml  typing.ml  util.ml
PeDuCoML/lib/llvm/: Pprint_comp_error.ml  Pprint_comp_error.mli  llvm_comp.ml  llvm_comp.mli
PeDuCoML/lib/middleend/: anf.ml  anf.mli  arg_counter.ml  arg_counter.mli  closure_conversion.ml  closure_conversion.mli  lambda_lift.ml  lambda_lift.mli  match_elim.ml  match_elim.mli  state.ml  state.mli
PeDuCoML/lib/parsing/: ast.ml  ast.mli  lexer.mli  lexer.mll  menhirparser.mly  parser.ml  parser.mli  util.ml  util.mli
PeDuCoML/lib/pretty_printers/: Pprintanf.ml  Pprintanf.mli  Pprintast.ml  (+3 more)
PeDuCoML/runtime/: TODO.md  dune  gc.c  gc.h  gc.s  runtime.c
PeDuCoML/test/: dune
SCAML/: SCAML.opam  dune-project
SCAML/demos/: inferencerTests.ml  inferencerTests.t
SCAML/lib/: anf.ml  anf.mli  anfPrinter.ml  anfPrinter.mli  asm.ml  asm.mli  ast.ml  ast.mli  astPrinter.ml  astPrinter.mli  closure.ml  closure.mli  counter.ml  counter.mli  dune  inferencer.ml  inferencer.mli  lambdaLifting.mli  lambda_lifting.ml  lambda_lifting.mli  llast.ml  llastPrinter.ml  llastPrinter.mli  llvmCompiler.ml  llvmCompiler.mli  llvm_compiler.ml  parser.ml  parser.mli  restrictedAst.ml  resultCounter.ml  resultCounter.mli  runtime.c  stdlibFunc.ml  stdlibFunc.mli  ty.ml  ty.mli
SCAML/test/: dune
WinML/: dune-project  winml.opam
WinML/lib/: dune  inferencer.ml  lexer.mll  parse.ml  parsed_tree.ml  parsed_tree.mli  parser.messages  parser.mly  types.ml  util.ml  util.mli
WinML/test/: dune  parser_factorial_test.ml  parser_factorial_test.t
YAML/: YAML.opam  dune-project
YAML/lib/: ast.ml  dune  typedtree.ml
YaML/: YaML.opam  dune  dune-project  yaml-inference.t  yaml.ml
YaML/lib/: Pprinttypedtree.ml  Pprinttypedtree.mli  Pprinttypetree.ml  Pprinttypetree.mli  ast.ml  dune  inferencer.ml  inferencer.mli  parser.ml  parser.mli  typedtree.mli  typetree.ml  typetree.mli
YaML/tests/: factorial.ya  fibonacci.ya
ZRusML/: Makefile  README.md  ZRusML.opam  dune  dune-project  example.ll  runtime.c
ZRusML/demos/: anf_test.ml  dune  inferencer_test.ml
ZRusML/lib/: anf.ml  anf.mli  anf_pretty.ml  anf_pretty.mli  anf_test.ml  ast.ml  ast.mli  ast_pretty.mli  ast_validator.ml  ast_validator.mli  closure_conversion.ml  closure_conversion.mli  code_inferencer.ml  code_inferencer.mli  compare.ml  compare.mli  compiler.ml  dune  inferencer.ml  inferencer.mli  interpreter.ml  interpreter.mli  lambda_lifting.ml  lambda_lifting.mli  llvm_compiler.ml  llvm_compiler.mli  parser.ml  parser.mli  parser_test.ml  pretty_printer.ml  pretty_printer.mli  typing.ml  typing.mli  var_counter.ml  var_counter.mli
ZRusML/runtime/: runtime.c
ZRusML/test/: dune
(+91 files in other folders)
