(lang dune 3.10)

(generate_opam_files true)

(cram enable)

(license LGPL-2.1-or-later)

(name JaML)

(source
 (github username/reponame))

(authors "Ilya Pankratov, Maxim Drumov")

(maintainers "Ilya Pankratov, Maxim Drumov")

(bug_reports "https://github.com/i-pankrat/comp23hw/issues")

(homepage "https://github.com/i-pankrat/comp23hw")

(package
 (name JaML)
 (synopsis "JaML")
 (description "Ja mini language")
 (version 0.1)
 (depends
  ocaml
  dune
  angstrom
  (ppx_inline_test :with-test)
  ppx_expect
  ppx_deriving
  bisect_ppx
  (ocamlformat :build)))
