(lang dune 3.11)

(generate_opam_files true)

(cram enable)

(license LGPL-3.0-or-later)

(authors "Anton Kraev" "Polina Badreeva")

(maintainers "Anton Kraev" "Polina Badreeva")

(package
 (name KREML) ; FIXME and regenerate .opam file using 'dune build @install'
 (synopsis "KREML compiler")
 (description "KREML compiler")
 (version 0.1)
 (depends
  dune
  angstrom
  llvm
  (ppx_inline_test :with-test)
  qcheck-core
  ppx_expect
  ppx_deriving
  bisect_ppx
  (odoc :with-doc)
  (ocamlformat :build)
  base
  ; After adding dependencies to 'dune' files and the same dependecies here too
  ))
