(env
 (dev
  (flags
   (:standard -warn-error -A -w -3-9-32-34-58)))
 (release
  (flags
   (:standard -warn-error -A -w -58))))

(executable
 (name yaml)
 (public_name yaml)
 (modules Yaml)
 (libraries YaML.Lib stdio))

(cram
 (deps
  ./tests/factorial.ya
  ./tests/fibonacci.ya
  ./tests/combinators.ya
  ./tests/occurs-check-disable.ya
  ./yaml.exe
  %{bin:yaml}))
