(executable
 (name test_infer)
 (modules test_infer)
 (public_name test_infer)
 (libraries CreeperML stdio)
 (instrumentation
  (backend bisect_ppx)))

(executable
 (name test_parser)
 (modules test_parser)
 (public_name test_parser)
 (libraries CreeperML stdio)
 (instrumentation
  (backend bisect_ppx)))

(executable
 (name test_db)
 (modules test_db)
 (public_name test_db)
 (libraries CreeperML stdio)
 (instrumentation
  (backend bisect_ppx)))

(executable
 (name test_closures)
 (modules test_closures)
 (public_name test_closures)
 (libraries CreeperML stdio)
 (instrumentation
  (backend bisect_ppx)))

(executable
 (name test_anf)
 (modules test_anf)
 (public_name test_anf)
 (libraries CreeperML stdio)
 (instrumentation
  (backend bisect_ppx)))

(cram
 (deps
  ./test_infer.exe
  ./test_parser.exe
  ./test_db.exe
  ./test_closures.exe
  ./test_anf.exe))
