(executable
 (name test_infer)
 (modules test_infer)
 (public_name test_infer)
 (libraries CreeperML stdio)
 (instrumentation
  (backend bisect_ppx)))

(executable
 (name test_parser)
 (modules test_parser)
 (public_name test_parser)
 (libraries CreeperML stdio)
 (instrumentation
  (backend bisect_ppx)))

(executable
 (name test_closures)
 (modules test_closures)
 (public_name test_closures)
 (libraries CreeperML stdio)
 (instrumentation
  (backend bisect_ppx)))

(executable
 (name test_anf)
 (modules test_anf)
 (public_name test_anf)
 (libraries CreeperML stdio)
 (instrumentation
  (backend bisect_ppx)))

(executable
 (name test_llvm)
 (modules test_llvm)
 (public_name test_llvm)
 (libraries CreeperML stdio)
 (instrumentation
  (backend bisect_ppx))
 (link_deps
  (file ../lib/bindings.co)
  (file ../lib/bindings.o)
  (file ../build.sh)))

(executable
 (name test_asm)
 (modules test_asm)
 (public_name test_asm)
 (libraries CreeperML stdio)
 (instrumentation
  (backend bisect_ppx))
 (link_deps
  (file ../lib/bindings.co)
  (file ../lib/bindings.o)
  (file ../build.sh)))

(cram
 (deps
  ./test_infer.exe
  ./test_parser.exe
  ./test_closures.exe
  ./test_anf.exe
  ./test_llvm.exe
  ./test_asm.exe
  ../lib/bindings.co
  ../lib/bindings.o
  ../build.sh))
