(library
 (name jaml_lib)
 (public_name JaML.Lib)
 (modules
  Ast
  Parser
  Typetree
  Typedtree
  Inferencer
  Pprinttypetree
  Pprinttypedtree)
 (libraries base angstrom)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps ppx_expect ppx_deriving.show ppx_deriving.eq))
 (inline_tests))
