(library
 (name jaml_lib)
 (public_name JaML.Lib)
 (modules
  Ast
  Parser
  Ty
  Typedtree
  Inferencer
  Pprintty
  Pprinttypedtree
  Pprinttopleveltree
  Pprintanf
  Lambdalift
  Closure
  LL_ast
  Anf
  Anfconv
  Monads)
 (modules_without_implementation LL_ast Anf)
 (libraries base angstrom)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps ppx_expect ppx_deriving.show ppx_deriving.eq))
 (inline_tests))
