(executable
 (name demoInfer)
 (public_name demoInfer)
 (modules DemoInfer)
 (instrumentation
  (backend bisect_ppx))
 (libraries KREML_lib stdio))

(executable
 (name demoAnf)
 (public_name demoAnf)
 (modules DemoAnf)
 (instrumentation
  (backend bisect_ppx))
 (libraries KREML_lib stdio))


(cram
 (deps ./demoInfer.exe ./demoAnf.exe))