(executable
 (name demoInfer)
 (modules DemoInfer)
 (instrumentation
  (backend bisect_ppx))
 (libraries KREML_lib stdio))

(executable
 (name demoAnf)
 (modules DemoAnf)
 (instrumentation
  (backend bisect_ppx))
 (libraries KREML_lib stdio))

(executable
 (name demoLlvm)
 (modules DemoLlvm)
 (instrumentation
  (backend bisect_ppx))
 (libraries KREML_lib stdio)
 (link_deps
  (file ../lib/llvm/runtime.so)))

(cram
 (deps ./demoInfer.exe ./demoAnf.exe ./demoLlvm.exe ../lib/llvm/runtime.so))
