(library
 (name KREML_lib)
 (public_name KREML.Lib)
 (modules Ast Parser Inferencer Typing Cc_ast Ll_ast Anf Clos_conv Counter Lambda_lifting Anf_conv Anf_pretty_printer)
 (libraries base angstrom)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps ppx_expect ppx_deriving.show))
 (inline_tests))
