(env
 (dev
  (flags
   (:standard -warn-error -A -w -3-9-32-34-58)))
 (release
  (flags
   (:standard -warn-error -A -w -58))))

(library
 (name neinml_lib)
 (public_name NeinML.Lib)
 (modules Ast Parser Typing Inferencer)
 (libraries base angstrom)
 (preprocess
  (pps ppx_expect ppx_deriving.show ppx_deriving.eq))
 (inline_tests))
