(library
 (name neinml_lib)
 (public_name NeinML.Lib)
 (modules
  Ast
  Parser
  Pprintast
  Typing
  Inferencer
  Monad
  Closure
  Lambda_lifting
  Anf
  Pprintanf
  Codegen)
 (libraries base angstrom llvm llvm.analysis)
 (preprocess
  (pps ppx_expect ppx_deriving.show ppx_deriving.eq ppx_compare))
 (inline_tests))
