(library
 (modules
  Ast
  Pprintast
  Pprintcf
  Inferencer
  Typing
  Util
  Anf
  Pprintanf
  Closure_conversion
  Lambda_lift
  Match_elim
  State
  Llvm_comp
  Pprint_comp_error
  Peducoml_stdlib
  Lexer
  Menhirparser
  Parser
  Riscv
  Riscv_comp
  Arg_counter
  Peducoml_runtime)
 (libraries llvm)
 (preprocess
  (pps ppx_expect ppx_deriving.show ppx_deriving.eq))
 (inline_tests)
 (instrumentation
  (backend bisect_ppx))
 (name PeDuCoML)
 (public_name PeDuCoML.Lib))

(include_subdirs unqualified)
