(library
 (name ZRusML_lib)
 (public_name ZRusML.lib)
 (modules
  Ast
  Parser
  Code_inferencer
  Typing
  Inferencer
  Anf
  Compare
  Closure_conversion
  Pretty_printer
  Lambda_lifting
  Llvm_compiler)
 (inline_tests)
 (libraries base angstrom stdlib llvm)
 (preprocess
  (pps ppx_expect ppx_deriving.show ppx_deriving.eq))
 (instrumentation
  (backend bisect_ppx)))
