(library
 (name ZRusML_lib)
 (public_name ZRusML.lib)
 (modules
  Ast
  Parser
  Code_inferencer
  Typing
  Inferencer
  Anf
  Closure_conversion
  Ast_pretty
  Lambda_lifting
  Anf_pretty
  Ast_validator
  )
 (inline_tests)
 (libraries base angstrom stdlib)
 (preprocess
  (pps ppx_expect ppx_deriving.show ppx_deriving.eq))
 (instrumentation
  (backend bisect_ppx)))
